--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Hello World</h1>
         <h2>Another line of code</h2>
+
+        <h2>This is the dev branch</h2>
     </body>
 </html>
