--- a/about.html
+++ b/about.html
@@ -6,11 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        <a href="./about.html">About </a>
-        <a href="./contact">Contact</a>
-        <h1>Hello World</h1>
-        <h2>Another line of code</h2>
-
-        <h2>This is the dev branch</h2>
+        <h1>About</h1>
     </body>
 </html>
