--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <title>Document</title>
     </head>
     <body>
+        <a href="./index.html">Go back to homepage</a>
         <h1>About</h1>
     </body>
 </html>
